@@ -1,5 +1,7 @@
 * SVN *
 
+* [converters] initial movable type support [sd]
+
 * [converters] use no filter for wordpress articles
 
 * Small bug fixes
